fixed z-index of settings, and line wrapping on title

--- a/app/styles/_includes/configuration.sass
+++ b/app/styles/_includes/configuration.sass
@@ -9,6 +9,7 @@
 	width: 815px
 	transition: $animation
 	border-radius: $border-radius $border-radius 0 0
+	z-index: 2
 
 	.configuration-group
 		border-top: 3px solid $dark
