--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -70,8 +70,8 @@ body
 		margin-bottom: 40px
 		font-size: 40px
 	@media (max-width: 450px)
-		margin-bottom: 30px
-		font-size: 30px
+		margin-bottom: 25px
+		font-size: 25px
 	h1
 		position: absolute
 		bottom: 0
